# USD-Asset-Publisher

./: .gitignore  DEVLOG.md  README.md
houdini-usd-publisher/: .gitignore  README.md  install.py  pyproject.toml
houdini-usd-publisher/config/: publish_config.json
houdini-usd-publisher/houdini/HoudiniTestProjects/: ExampleProject.hipnc
houdini-usd-publisher/houdini/PublishTesting/DefaultPrimVal_SceneTest/AutoFixVersion/: asset.usda  publish_report.json
houdini-usd-publisher/houdini/PublishTesting/DefaultPrimVal_SceneTest/CleanPublishVersion/: asset.usda  publish_report.json
houdini-usd-publisher/houdini/PublishTesting/DefaultPrim_SceneTest/v001/: asset.usda  publish_report.json
houdini-usd-publisher/houdini/ValidateFileTesting/Kitchen_set/: Kitchen_set.usd  validation_report.json
houdini-usd-publisher/houdini/project_test_file/: pythontool_test.hipnc
houdini-usd-publisher/media/: VIDEO_LINK.txt
houdini-usd-publisher/package/: houdini-usd-publisher.json
houdini-usd-publisher/src/houdini_usd_publisher/: __init__.py  cli.py
houdini-usd-publisher/src/houdini_usd_publisher/core/: config.py  exporter.py  packager.py  publisher.py  registry.py  report.py
houdini-usd-publisher/src/houdini_usd_publisher/ui/: dummy_panel.py  panel.py
houdini-usd-publisher/src/houdini_usd_publisher/validation/: base.py  default_prim.py  file_reference.py  kind.py  material.py  metadata.py  naming.py  up_axis.py  variant_set.py
houdini-usd-publisher/tests/: conftest.py  test_autofix.py  test_config.py  test_exporter.py  test_packager.py  test_publisher.py  test_registry.py  test_report.py
houdini-usd-publisher/tests/validators/: test_default_prim.py  test_file_reference.py  test_kind.py  test_material.py  test_metadata.py  test_naming.py  test_upaxis.py  test_variant_set.py
(+20 files in other folders)
