[project]
name = "houdini-usd-publisher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gabrielazmbr", email = "gabrielazmbr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
houdini-usd-publisher = "houdini_usd_publisher:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
