[project]
name = "houdini-usd-publisher"
version = "0.1.0"
description = "USD asset publisher for Houdini"
readme = "README.md"
authors = [
    { name = "gabrielazmbr", email = "gabrielazmbr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.11.0",
    "usd-core>=26.5",
]

[project.scripts]
publish = "houdini_usd_publisher.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
