[project]
name = "houdini-usd-publisher"
version = "0.1.0"
description = "USD asset publisher for Houdini"
readme = "README.md"
authors = [
    { name = "gabrielazmbr", email = "gabrielazmbr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.4.22",
    "pymongo>=4.17.0",
    "pyside6>=6.11.0",
    "python-dotenv>=1.2.2",
    "usd-core>=26.5",
]

[project.scripts]
publish = "houdini_usd_publisher.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
    "pytest>=9.0.3",
]
